Fixed element off screen on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -2492,9 +2492,6 @@ hr {
   .contact .container p {
     margin-bottom: 20px;
   }
-  .about .container #scene {
-    right: -104px;
-  }
   .preloader-wrap p {
     font-size: 35px; 
   }
